Replace name for MEDFormat with a real person (Matt) for adequate reference

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3552,7 +3552,7 @@
         },
         {
             "login": "MEDFormat",
-            "name": "MEDFormat",
+            "name": "Matt Stead",
             "contributions": [
                 "code"
             ],
