Renaming data-description into data-summary-files

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,7 +7,8 @@ nav:
       - Common principles: common-principles.md
       - Modality agnostic files:
           - Dataset description: modality-agnostic-files/dataset-description.md
-          - Data description: modality-agnostic-files/data-description.md
+          - Data summary files: modality-agnostic-files/data-summary-files.md
+          - Phenotypic and assessment data: modality-agnostic-files/phenotypic-assessment-data.md
           - Code: modality-agnostic-files/code.md
       - Modality specific files:
           - Magnetic Resonance Imaging: modality-specific-files/magnetic-resonance-imaging-data.md
@@ -136,8 +137,9 @@ plugins:
         "01-introduction.md": "introduction.md"
         "02-common-principles.md": "common-principles.md"
         "03-modality-agnostic-files/01-dataset-description.md": "modality-agnostic-files/dataset-description.md"
-        "03-modality-agnostic-files/02-data-description.md": "modality-agnostic-files/data-description.md"
-        "03-modality-agnostic-files/03-code.md": "modality-agnostic-files/code.md"
+        "03-modality-agnostic-files/02-data-summary-files.md": "modality-agnostic-files/data-summary-files.md"
+        "03-modality-agnostic-files/03-phenotypic-assessment-data.md": "modality-agnostic-files/phenotypic-assessment-data.md"
+        "03-modality-agnostic-files/04-code.md": "modality-agnostic-files/code.md"
         "04-modality-specific-files/01-magnetic-resonance-imaging-data.md": "modality-specific-files/magnetic-resonance-imaging-data.md"
         "04-modality-specific-files/02-magnetoencephalography.md": "modality-specific-files/magnetoencephalography.md"
         "04-modality-specific-files/03-electroencephalography.md": "modality-specific-files/electroencephalography.md"
