--- a/src/schema/objects/files.yaml
+++ b/src/schema/objects/files.yaml
@@ -116,7 +116,7 @@ phenotype:
     A directory where to store participant level measurements (for
     example responses from multiple questionnaires) split into
     individual files separate from `participants.tsv`.
-    See the [relevant section](SPEC_ROOT/modality-agnostic-files/data-description.md#phenotypic-and-assessment-data)
+    See the [relevant section](SPEC_ROOT/modality-agnostic-files/phenotypic-and-assessment-data.md)
     for more information.
 sourcedata:
   display_name: Source data
