--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -137,6 +137,7 @@ plugins:
         "01-introduction.md": "introduction.md"
         "02-common-principles.md": "common-principles.md"
         "03-modality-agnostic-files.md": "modality-agnostic-files/dataset-description.md"
+        "modality-agnostic-files.md": "modality-agnostic-files/dataset-description.md"
         "04-modality-specific-files/01-magnetic-resonance-imaging-data.md": "modality-specific-files/magnetic-resonance-imaging-data.md"
         "04-modality-specific-files/02-magnetoencephalography.md": "modality-specific-files/magnetoencephalography.md"
         "04-modality-specific-files/03-electroencephalography.md": "modality-specific-files/electroencephalography.md"
