--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -37,7 +37,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-uv@v6
+      - uses: astral-sh/setup-uv@v6
       - name: Lint yml files in src/schema
         run: uvx yamllint -f standard src/schema/ -c .yamllint.yml
 
@@ -46,7 +46,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-uv@v6
+      - uses: astral-sh/setup-uv@v6
       - run: uvx ruff format --diff
       - run: uvx ruff check
 
@@ -55,7 +55,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-uv@v6
+      - uses: astral-sh/setup-uv@v6
       - name: Check for Latin phrases
         run: uv run tools/no-bad-latin.py
 
@@ -64,6 +64,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-uv@v6
+      - uses: astral-sh/setup-uv@v6
       - name: Validate CITATION.cff
         run: uvx cffconvert --validate
