--- a/.github/workflows/schemacode_ci.yml
+++ b/.github/workflows/schemacode_ci.yml
@@ -76,8 +76,8 @@ jobs:
       - name: "Fetch packages"
         uses: actions/download-artifact@v4
         with:
-          name: dist
-          path: dist/
+          name: Packages
+          path: dist
 
       - name: "Install package"
         run: |
