--- a/src/schema/objects/metadata.yaml
+++ b/src/schema/objects/metadata.yaml
@@ -49,6 +49,70 @@ AcquisitionVoxelSize:
     type: number
     exclusiveMinimum: 0
     unit: mm
+Activities:
+  name: Activities
+  display_name: Activities
+  description: |
+    Describe Activities provenance records.
+  type: array
+  minItems: 1
+  items:
+    type: object
+    required: [Id, Label, Command]
+    properties:
+      Id:
+        name: Id
+        description: Identifier for the activity.
+        type: string
+        format: uri
+      Label:
+        name: Label
+        description: Name of the tool, script, or function used (e.g. “bet”, "recon-all", "myFunc", "docker").
+        type: string
+        format: label
+      Command:
+        name: Command
+        description: Command(s) used to run the tool, including all parameters.
+        type: string
+      AssociatedWith:
+        name: AssociatedWith
+        description: |
+          Identifier(s) of the software package(s) used to compute this activity.
+          The corresponding Software must be defined with its own Software record).
+        anyOf:
+          - type: string
+            format: uri
+          - type: array
+            items:
+              type: string
+              format: uri
+      Used:
+        name: Used
+        description: |
+          Identifier(s) of entity(ies) or environment(s) used by this activity.
+          The corresponding Entities (resp. Environments) must be defined with their own Entity (resp. Environment) record.
+        anyOf:
+          - type: string
+            format: uri
+          - type: array
+            items:
+              type: string
+              format: uri
+      Type:
+        name: Type
+        description: A term from a controlled vocabulary that more specifically describes the Activity.
+        type: string
+        format: uri
+      StartedAtTime:
+        name: StartedAtTime
+        description: A timestamp tracking when this activity started.
+        type: string
+        format: date
+      EndedAtTime:
+        name: EndedAtTime
+        description: A timestamp tracking when this activity ended.
+        type: string
+        format: date
 Anaesthesia:
   name: Anaesthesia
   display_name: Anaesthesia
@@ -1084,6 +1148,87 @@ EncodingTechnique:
     For example, `"Cartesian"`, `"EPSI"`, `"Spiral"`,
     or `"Density-weighted concentric ring trajectory"`.
   type: string
+Entities:
+  name: Entities
+  display_name: Entities
+  description: |
+    Describe Entities provenance records.
+  type: array
+  minItems: 1
+  items:
+    type: object
+    required: [Id, Label]
+    recommanded: [Digest]
+    properties:
+      Id:
+        name: Id
+        description: Identifier for the entity.
+        type: string
+        format: bids_uri
+      Label:
+        name: Label
+        description: A name for the entity.
+        type: string
+        format: label
+      Digest:
+        name: Digest
+        description: |
+          For files, this would include checksums of files.
+          It would take the form {"": "value"}.
+        type: object
+      AtLocation:
+        name: AtLocation
+        description: |
+          For input files, this is the relative path to the file on disk.
+        type: string
+      GeneratedBy:
+        name: GeneratedBy
+        description: |
+          Identifier(s) of the Activity(ies) which generated this Entity.
+          The corresponding Activity must be defined with its own Activity record.
+        type: string
+        format: uri
+      Type:
+        name: Type
+        description: A term from a controlled vocabulary that more specifically describes the Entity.
+        type: string
+        format: uri
+Environments:
+  name: Environments
+  display_name: Environments
+  description: |
+    Describe Environments provenance records.
+  type: array
+  minItems: 1
+  items:
+    type: object
+    required: [Id, Label]
+    properties:
+      Id:
+        name: Id
+        description: |
+          Identifier for the environment (this identifier will be used to associated activities with this environment).
+        type: string
+        format: uri
+      Label:
+        name: Label
+        description: A name for the environment.
+        type: string
+        format: label
+      EnvVars:
+        name: EnvVars
+        description: |
+          A dictionary defining the environment variables as key-value pairs.
+        type: object
+      OperatingSystem:
+        name: OperatingSystem
+        description: Name of the operating system.
+        type: string
+      Dependencies:
+        name: Dependencies
+        description: |
+          A dictionary defining the software used and their versions as key-value pairs.
+        type: object
 EpochLength:
   name: EpochLength
   display_name: Epoch Length
@@ -3399,6 +3544,38 @@ SliceTiming:
     type: number
     minimum: 0
     unit: s
+Software:
+  name: Software
+  display_name: Software
+  description: |
+    Describe Software provenance records.
+  type: array
+  minItems: 1
+  items:
+    type: object
+    required: [Id, Label, Version]
+    properties:
+      Id:
+        name: Id
+        description: |
+          that will be used to associate activities with this software package (e.g., urn:1264-1233-11231-12312, "urn:bet-o1ef4rt")
+        type: string
+        format: uri
+      Label:
+        name: Label
+        description: Name of the software package.
+        type: string
+        format: label
+      Version:
+        name: Version
+        description: Version of the software package.
+        type: string
+      AltIdentifier:
+        name: AltIdentifier
+        description: |
+          URI of the RRID for this software package (cf. https://rrid.site/).
+        type: string
+        format: uri
 SoftwareFilters:
   name: SoftwareFilters
   display_name: Software Filters
